refact: add swagger docs for product
