# internal/dto/dto.go
@@ -15,3 +15,8 @@ type GetJWTInput struct {
 	Email string `json:"email"`
 	Password string `json:"password"`
 }
+
+type GetJWTOutput struct {
+	AccessToken string `json:"token"`
+}
+
