# internal/infra/webserver/handlers/user_handlers.go
@@ -26,6 +26,17 @@ func NewUserHandler(db database.UserInterface) *UserHandler {
 		UserDB: db}
 }
 
+// Create user godoc
+// @Summary 		Get a user JWT
+// @Description 	Get a user JWT
+// @Tags 			users
+// @Accept 			json
+// @Produce 		json
+// @Param 			request body dto.GetJWTInput	true	"user credentials"
+// @Success 		201 {object}	dto.GetJWTOutput
+// @Failure 		404	{object}	Error
+// @Failure 		500	{object}	Error
+// @Router 			/users/generate_token [post]
 func (uh *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	jwt := r.Context().Value("jwt").(*jwtauth.JWTAuth)
 	jwtExperiesIn := r.Context().Value("jwtExpiresIn").(int)
@@ -37,7 +48,9 @@ func (uh *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	}
 	u, err := uh.UserDB.FindByEmail(user.Email)
 	if err != nil {
-		w.WriteHeader(http.StatusUnauthorized)
+		w.WriteHeader(http.StatusNotFound)
+		err := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(err)
 		return
 	}
 
@@ -51,11 +64,7 @@ func (uh *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 		"exp": time.Now().Add(time.Second * time.Duration(jwtExperiesIn)).Unix(),
 	})
 
-	accessToken := struct {
-		AccessToken string `json:"access_token"`
-	}{
-		AccessToken: tokenString,
-	}
+	accessToken := dto.GetJWTOutput{AccessToken: tokenString}
 
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
@@ -82,11 +91,15 @@ func (uh *UserHandler) Create(w http.ResponseWriter, r *http.Request) {
 	u, err := entity.NewUser(user.Name, user.Email, user.Password)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	err = uh.UserDB.Create(u)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.WriteHeader(http.StatusCreated)
